force-app/main/default/objects/nepa_comment_attribution__c.object
<CustomObject>
    <description>Junction object linking an individual PublicComplaint record to a nepa_decision_modification__c record. Used when attribution_type on the modification is Individual Comments or Both. For bulk comment clusters (e.g., 500 form letters sharing the same concern), use nepa_attributed_cluster_id__c and nepa_attributed_cluster_count__c on nepa_decision_modification__c instead of creating 500 junction records.</description>

    <fields>
        <fullName>nepa_modification__c</fullName>
        <description>The decision modification this comment is credited with influencing.</description>
        <inlineHelpText>The decision modification this comment influenced.</inlineHelpText>
        <label>Decision Modification</label>
        <referenceTo>nepa_decision_modification__c</referenceTo>
        <relationshipLabel>Attributed Comments</relationshipLabel>
        <relationshipName>Attributed_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>

    <fields>
        <fullName>nepa_comment__c</fullName>
        <description>The specific PublicComplaint record credited with influencing this decision modification. For large clusters of near-identical comments, use the cluster attribution fields on nepa_decision_modification__c instead.</description>
        <inlineHelpText>The public comment that influenced this modification.</inlineHelpText>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Comment</label>
        <referenceTo>PublicComplaint</referenceTo>
        <relationshipLabel>Decision Modifications Attributed</relationshipLabel>
        <relationshipName>Decision_Modifications_Attributed</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>nepa_attribution_note__c</fullName>
        <description>Optional note explaining how this specific comment influenced the modification — for example, citing the specific claim or data point in the comment that the agency acted on. Provides granular audit trail beyond the modification-level description.</description>
        <inlineHelpText>Optional: what specific aspect of this comment drove the change?</inlineHelpText>
        <label>Attribution Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>

    <label>NEPA Comment Attribution</label>
    <nameField>
        <displayFormat>ATTR-{00000000}</displayFormat>
        <label>Attribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEPA Comment Attributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>